--- a/src/etc/confd/templates/elasticsearch.yml.tmpl
+++ b/src/etc/confd/templates/elasticsearch.yml.tmpl
@@ -15,7 +15,7 @@ path.work: /opt/esvol/work
 
 # Cluster name identifies your cluster for auto-discovery. If you're running
 # multiple clusters on the same network, make sure you're using unique names.
-cluster.name: es_cluster01
+cluster.name: {{getv "/es/cluster/name"}}
 
 # Node names are generated dynamically on startup, so you're relieved
 # from configuring them manually. You can tie this node to a specific name:
@@ -36,6 +36,11 @@ discovery.zen.ping.multicast.enabled: false
 # Configure an initial list of master nodes in the cluster
 # to perform discovery when new nodes (master or data) are started:
 #discovery.zen.ping.unicast.hosts: ["host1", "host2:port"]
+discovery.zen.ping.unicast.hosts: [
+{{ range $server := .es_cluster_servers }}
+  "{{ $server.Value }}",
+{{ end }}
+]
 
 # Elasticsearch performs poorly when JVM starts swapping so ensure that
 # it _never_ swaps.
