Correct logs location and KV keys.

--- a/src/etc/confd/templates/elasticsearch.yml.tmpl
+++ b/src/etc/confd/templates/elasticsearch.yml.tmpl
@@ -4,14 +4,14 @@
 # Can optionally include more than one location, causing data to be striped across
 # the locations (a la RAID 0) on a file level, favouring locations with most free
 # space on creation. For example:
-#path.data: /opt/elasticsearch/$inst/data1,/opt/elasticsearch/$inst/data2
-path.data: /opt/esvol/data
+#path.data: /esvol/$inst/data1,/esvol/$inst/data2
+path.data: /esvol/data
 # Path to log files:
-path.logs: /opt/esvol/log
+path.logs: /esvol/logs
 # Path to where plugins are installed:
-path.plugins: /opt/esvol/plugins
+path.plugins: /esvol/plugins
 # Path to temporary files:
-path.work: /opt/esvol/work
+path.work: /esvol/work
 
 # Cluster name identifies your cluster for auto-discovery. If you're running
 # multiple clusters on the same network, make sure you're using unique names.
@@ -37,7 +37,7 @@ discovery.zen.ping.multicast.enabled: false
 # to perform discovery when new nodes (master or data) are started:
 #discovery.zen.ping.unicast.hosts: ["host1", "host2:port"]
 discovery.zen.ping.unicast.hosts: [
-{{ range $server := .es_cluster_servers }}
+{{ range $server := .es_cluster_name_servers }}
   "{{ $server.Value }}",
 {{ end }}
 ]
