Modified KV keys, removed systemd dependencies.

--- a/src/etc/confd/templates/elasticsearch.yml.tmpl
+++ b/src/etc/confd/templates/elasticsearch.yml.tmpl
@@ -36,7 +36,7 @@ discovery.zen.ping.multicast.enabled: false
 # Configure an initial list of master nodes in the cluster
 # to perform discovery when new nodes (master or data) are started:
 #discovery.zen.ping.unicast.hosts: ["host1", "host2:port"]
-discovery.zen.ping.unicast.hosts: [{{ range getvs "/es/host/*" }} "{{.}}",{{ end }}]
+discovery.zen.ping.unicast.hosts: [{{ range getvs "/es/host/*" }}"{{.}}"{{ end }}]
 
 # Elasticsearch performs poorly when JVM starts swapping so ensure that
 # it _never_ swaps.
